src/test/resources/typeSystemTestModels/invalid/interfaces/InterfaceNoStaticMethod.java
package typeSystemTestModels.invalid.interfaces;

public interface InterfaceNoStaticMethod {
  static String getString();
}